Fix button positioning from pageview absolute to body absolute Earlier in absolute positioning the button was absolutely positioned in relation to the viewport, ie the part of page visible in our screen, but now we made body position as relative so the button is absolutely positioned wrt body

--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ body {
   color: #444;
   font-family: sans-serif;
   border-top: 10px solid #1098ad;
+
+  position: relative;
 }
 
 .container {
